--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -36,4 +36,4 @@ jobs:
         run: sbt compile publishM2 --debug
 
       - name: Build gradle javasdk-examples --warning-mode all
-        run: ./gradlew -p javasdk-examples build --warning-mode all
+        run: ./javasdk-examples/gradlew -p javasdk-examples build --warning-mode all
